--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Bernhard H&auml;ussermann: Personal Portfolio</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<meta name="color-scheme" content="light dark">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon.png">
