--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <title>Bernhard H&auml;ussermann: Personal Portfolio</title>
+    <title>Bernhard H&auml;ussermann — Portfolio</title>
   </head>
   <body>
     <div id="app"></div>
